Updating the thesis with partially expanded implementation section. Still needs more information as well as the new architecture diagram I created. 78 pages and 59 references so far.
Related to xwsxethan/MusicScoring#100

--- a/Documents/Thesis/HolderThesis2015.bib
+++ b/Documents/Thesis/HolderThesis2015.bib
@@ -588,3 +588,49 @@ year = {2015},
   year={2014},
   school={Virginia Polytechnic Institute and State University}
 }
+
+@Misc{mysql,
+author = {{Oracle Corporation}},
+title = {MySQL The world's most popular open source database},
+howpublished = {\url{https://www.mysql.com/}},
+year = {2015},
+}
+
+@book{gamma1994design,
+  title={Design patterns: elements of reusable object-oriented software},
+  author={Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John},
+  year={1994},
+  publisher={Pearson Education}
+}
+
+@article{bloch2008effective,
+  title={Effective java (the java series)},
+  author={Bloch, Joshua},
+  year={2008},
+  publisher={Prentice Hall PTR}
+}
+
+
+
+@book{phonegapBook,
+ author = {Ghatol, Rohit and Patel, Yogesh},
+ title = {Beginning PhoneGap: Mobile Web Framework for JavaScript and HTML5},
+ year = {2012},
+ isbn = {1430239034, 9781430239031},
+ edition = {1st},
+ publisher = {Apress},
+ address = {Berkely, CA, USA},
+}
+
+@incollection{phonegapArticle,
+year={2010},
+isbn={978-1-4302-2868-4},
+booktitle={Pro Smartphone Cross-Platform Development},
+doi={10.1007/978-1-4302-2869-1_8},
+title={PhoneGap},
+url={http://dx.doi.org/10.1007/978-1-4302-2869-1_8},
+publisher={Apress},
+author={Allen, Sarah and Graupera, Vidal and Lundrigan, Lee},
+pages={131-152},
+language={English}
+}
