Adding more citations for studies using self-assigned complexity grades. 78 and 68 Related to xwsxethan/MusicScoring#100

--- a/Documents/Thesis/HolderThesis2015.tex
+++ b/Documents/Thesis/HolderThesis2015.tex
@@ -336,9 +336,9 @@ State organizations, such as \cite{VBODA} in Virginia and \cite{NYSSMA} in New Y
 
 The difficulty grading schemes in both types of organizations are analogous to the complexity of the piece, except that in these organizations pieces are graded subjectively by a group of people rather than a uniform algorithm. Additionally, the grades are typically listed as integer values between 1 and 10, thus lacking a sufficient level of granularity to express nuanced differences between musical pieces.
 
-Further past works have specifically studied the complexity of music as experienced by listeners or observers. These works show great insights into defining complexity and in fact utilize very similar music elements as representative features to determine overall complexity. For instance, \cite{madsen2006music} relies on note pitches, intervals, and durations of notes as features on pieces of MIDI formatted music to determine the complexity experienced by listeners. Similarly, \cite{streich2006automatic} presents an entire Ph. D. thesis on characterizing the complexity of music from the viewpoint of the listener.
+Further past works have specifically studied the complexity of music as experienced by listeners or observers. These works show great insights into defining complexity and in fact utilize very similar music elements as representative features to determine overall complexity. For instance, \cite{madsen2006music} relies on note pitches, intervals, and durations of notes as features on pieces of MIDI formatted music to determine the complexity experienced by listeners. Similarly, \cite{streich2006automatic} presents an entire Ph. D. thesis on characterizing the complexity of music from the viewpoint of the listener. Other works have specifically utilized listener complexity in related studies \cite{Heyduk1975} \cite{parry2004musical} \cite{mauch2011structural} \cite{orr2001relationship} \cite{williams2005effect} \cite{burke1990musical} \cite{north1999can} \cite{steck1975preference}.
 
-Several related works from \cite{streich2006automatic} also formally define what complexity is in terms of listeners and what information can be gathered from it as a property of music \cite{edmonds1995complexity} \cite{pressing1999cognitive} \cite{scheirer2000perceived}. While this thesis focuses on the complexity experienced by performers, such related works all provide a basis to build upon. Future work could seek to compare the complexity experienced by listeners or observers to that of the performer to see what similarities (if any) arise.
+Several related works from \cite{streich2006automatic} also formally define what complexity is in terms of listeners and what information can be gathered from it as a property of music \cite{edmonds1995complexity} \cite{pressing1999cognitive} \cite{scheirer2000perceived}. While this thesis focuses on the complexity experienced by performers, such related works all provide a basis to build upon \cite{Knuth:1984:CS:358027.358042}. Future work could seek to compare the complexity experienced by listeners or observers to that of the performer to see what similarities (if any) arise.
 
 \section{Music Scan \& Search}
 \label{sec:relscan}
