--- a/Documents/Thesis/HolderThesis2015.bib
+++ b/Documents/Thesis/HolderThesis2015.bib
@@ -150,7 +150,7 @@ year = {2010},
  acmid = {1753776},
  publisher = {John Wiley \& Sons, Inc.},
  address = {New York, NY, USA},
- keywords = {L-system, music perception, psychological complexity, rewriting rule, rhythm, tree similarity},
+ keywords = {L-system, music perception, psychological complexity, rewriting rule, rhythm, tree similarity}
 } 
 
 @inproceedings{Byrd2001,
@@ -167,7 +167,7 @@ year = {2010},
  doi = {10.1145/379437.379662},
  acmid = {379662},
  publisher = {ACM},
- address = {New York, NY, USA},
+ address = {New York, NY, USA}
 }
 
 @article{Allali2009,
@@ -633,4 +633,108 @@ publisher={Apress},
 author={Allen, Sarah and Graupera, Vidal and Lundrigan, Lee},
 pages={131-152},
 language={English}
+}
+
+@article{Knuth:1984:CS:358027.358042,
+ author = {Knuth, Donald E.},
+ title = {The Complexity of Songs},
+ journal = {Commun. ACM},
+ issue_date = {April 1984},
+ volume = {27},
+ number = {4},
+ month = apr,
+ year = {1984},
+ issn = {0001-0782},
+ pages = {344--346},
+ numpages = {3},
+ url = {http://doi.acm.org/10.1145/358027.358042},
+ doi = {10.1145/358027.358042},
+ acmid = {358042},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+} 
+
+@article{Heyduk1975,
+ year={1975},
+ issn={0031-5117},
+ journal={Perception & Psychophysics},
+ volume={17},
+ number={1},
+ doi={10.3758/BF03204003},
+ title={Rated preference for musical compositions as it relates to complexity and exposure frequency},
+ url={http://dx.doi.org/10.3758/BF03204003},
+ publisher={Springer-Verlag},
+ author={Heyduk, RonaldG.},
+ pages={84-90},
+ language={English}
+}
+
+@article{parry2004musical,
+  title={Musical complexity and top 40 chart performance},
+  author={Parry, Robert Mitchell},
+  year={2004},
+  publisher={Georgia Institute of Technology}
+}
+
+@inproceedings{mauch2011structural,
+  title={Structural Change on Multiple Time Scales as a Correlate of Musical Complexity.},
+  author={Mauch, Matthias and Levy, Mark},
+  booktitle={ISMIR},
+  pages={489--494},
+  year={2011}
+}
+
+@article{orr2001relationship,
+  title={The relationship between musical complexity and liking in jazz and bluegrass},
+  author={Orr, Mark G and Ohlsson, Stellan},
+  journal={Psychology of Music},
+  volume={29},
+  number={2},
+  pages={108--127},
+  year={2001},
+  publisher={Sage Publications}
+}
+
+@article{williams2005effect,
+  title={Effect of music training and musical complexity on focus of attention to melody or harmony},
+  author={Williams, Lindsey R},
+  journal={Journal of Research in Music Education},
+  volume={53},
+  number={3},
+  pages={210--221},
+  year={2005},
+  publisher={SAGE Publications}
+}
+
+@article{burke1990musical,
+  title={MUSICAL PREFERENCES AS A FUNCTION OF STIMULUS COMPLEXITY AND LISTENERS'SOPHISTICATION},
+  author={Burke, Michael J and Gridley, Mark C},
+  journal={Perceptual and Motor Skills},
+  volume={71},
+  number={2},
+  pages={687--690},
+  year={1990},
+  publisher={Ammons Scientific}
+}
+
+@article{north1999can,
+  title={Can music move people? The effects of musical complexity and silence on waiting time},
+  author={North, Adrian C and Hargreaves, David J},
+  journal={Environment and Behavior},
+  volume={31},
+  number={1},
+  pages={136--149},
+  year={1999},
+  publisher={Sage Publications}
+}
+
+@article{steck1975preference,
+  title={Preference for musical complexity: Effects of context.},
+  author={Steck, Loren and Machotka, Pavel},
+  journal={Journal of Experimental Psychology: Human Perception and Performance},
+  volume={1},
+  number={2},
+  pages={170},
+  year={1975},
+  publisher={American Psychological Association}
 }
