Updating thesis with even longer implementation section.
Related to xwsxethan/MusicScoring#100

--- a/Documents/Thesis/HolderThesis2015.bib
+++ b/Documents/Thesis/HolderThesis2015.bib
@@ -18,7 +18,7 @@ author = {Holder, Ethan},
 title = {MusicScoring},
 howpublished = {\url{https://github.com/xwsxethan/MusicScoring}},
 month = {2},
-year = {2015},
+year = {2015}
 }
 
 @Misc{FinaleNotepad,
@@ -26,7 +26,7 @@ author = {{Makemusic Inc.}},
 title = {Finale Notepad},
 howpublished = {\url{http://www.finalemusic.com/products/finale-notepad/}},
 month = {3},
-year = {2015},
+year = {2015}
 }
 
 @Misc{Sibelius,
@@ -34,7 +34,7 @@ author = {{Avid Technology Inc.}},
 title = {Sibelius},
 howpublished = {\url{http://www.avid.com/US/products/sibelius}},
 month = {3},
-year = {2015},
+year = {2015}
 }
 
 @Misc{MusicXML,
@@ -42,7 +42,7 @@ author = {{Makemusic Inc.}},
 title = {{MusicXML}},
 howpublished = {\url{http://www.musicxml.com/}},
 month = {3},
-year = {2015},
+year = {2015}
 }
 
 @Misc{Audiveris,
@@ -50,7 +50,7 @@ author = {Bitteur, Hervé},
 title = {Audiveris},
 howpublished = {\url{https://audiveris.kenai.com/}},
 month = {1},
-year = {2013},
+year = {2013}
 }
 
 @Misc{JSONAPI,
@@ -58,7 +58,7 @@ author = {{JSON Simple}},
 title = {json-simple},
 howpublished = {\url{https://code.google.com/p/json-simple/}},
 month = {2},
-year = {2012},
+year = {2012}
 }
 
 @Misc{XMLAPI,
@@ -67,7 +67,7 @@ title = {The Apache Xerces™ Project},
 howpublished = {\url{http://xerces.apache.org/index.html}},
 day = {20},
 month = {1},
-year = {2013},
+year = {2013}
 }
 
 @Misc{jQuery,
@@ -81,28 +81,28 @@ year = {2015},
 author = {Otto and Thornton},
 title = {Bootstrap},
 howpublished = {\url{http://getbootstrap.com/}},
-year = {2015},
+year = {2015}
 }
 
 @Misc{DataTables,
 author = {{SpryMedia Ltd.}},
 title = {DataTables Table plug-in for {jQuery}},
 howpublished = {\url{https://www.datatables.net/}},
-year = {2015},
+year = {2015}
 }
 
 @Misc{D3,
 author = {Bostock, Mike},
 title = {D3 Data-Driven Documents},
 howpublished = {\url{http://d3js.org/}},
-year = {2013},
+year = {2013}
 }
 
 @Misc{VexFlow,
 author = {Cheppudira, Mohit Muthanna},
 title = {vexflow},
 howpublished = {\url{https://github.com/0xfe/vexflow}},
-year = {2010},
+year = {2010}
 }
 
 @article{Seemore,
@@ -130,7 +130,7 @@ year = {2010},
  acmid = {2475062},
  publisher = {IEEE Computer Society},
  address = {Washington, DC, USA},
- keywords = {difficulty recognition, classification, computer music, sheet music analysis},
+ keywords = {difficulty recognition, classification, computer music, sheet music analysis}
 }
 
 @article{Liou2010,
@@ -186,7 +186,7 @@ year = {2010},
  acmid = {2365200},
  publisher = {IOS Press},
  address = {Amsterdam, The Netherlands, The Netherlands},
- keywords = {alignment, chord matching, edit operations, music comparison, polyphony},
+ keywords = {alignment, chord matching, edit operations, music comparison, polyphony}
 }
 
 @article{Cataltepe2007,
@@ -205,7 +205,7 @@ year = {2010},
  doi = {10.1155/2007/36409},
  acmid = {1289111},
  publisher = {Hindawi Publishing Corp.},
- address = {New York, NY, United States},
+ address = {New York, NY, United States}
 }
 
 @inproceedings{Cuthbert2011,
@@ -228,7 +228,7 @@ year = {2010},
         keywords={music performance; skilled motor behavior; guitar fingering; degrees of freedom; SPORT SCIENCES; BEHAVIOR; PATTERNS; PERFORMANCE; VARIABILITY; MODEL; ARM MOVEMENT; NOISE; NEUROSCIENCES; PSYCHOLOGY; PSYCHOLOGY, EXPERIMENTAL; GRAMMAR; SELECTION; Movement - physiology; Motor Skills - physiology; Posture - physiology; Fingers - physiology; Fingers; Motor ability; Research; Guitarists; Physiological aspects},
         isbn={0022-2895},
         language={English},
-        url={www.summon.com},
+        url={www.summon.com}
 }
 
 @inproceedings{Good2001,
@@ -244,14 +244,14 @@ year = {2010},
 author = {{Virginia Band and Orchestra Directors Association}},
 title = {Virginia Band and Orchestra Directors Association},
 howpublished = {\url{http://www.vboda.org/}},
-year = {2015},
+year = {2015}
 }
 
 @Misc{NYSSMA,
 author = {{NYSSMA New York State School Music Association}},
 title = {NYSSMA New York State School Music Association},
 howpublished = {\url{http://www.nyssma.org/}},
-year = {2015},
+year = {2015}
 }
 
 @inproceedings{Choudhury2000,
@@ -265,28 +265,28 @@ year = {2015},
 author = {{Notation Software Germany}},
 title = {Notation Composer},
 howpublished = {\url{http://www.notation.com/NotationComposer.php}},
-year = {2014},
+year = {2014}
 }
 
 @Misc{RoyalSyllabus,
 author = {{Royal Conservatory Music Development Program}},
 title = {Clarinet Syllabus},
 howpublished = {\url{https://www.musicdevelopmentprogram.org/sites/default/files/files/S42_Clarinet%20Syl_MDP_2014_online_SECURED.pdf}},
-year = {2014},
+year = {2014}
 }
 
 @Misc{IMSLP,
 author = {{Project Petrucci LLC}},
 title = {International Music Score Library Project},
 howpublished = {\url{http://imslp.org/}},
-year = {2015},
+year = {2015}
 }
 
 @Misc{SharpEye,
 author = {{Visiv}},
 title = {SharpEye Music Scanning},
 howpublished = {\url{http://www.visiv.co.uk/}},
-year = {2015},
+year = {2015}
 }
 
 @Book{Standard,
@@ -330,7 +330,7 @@ year = {2015},
 author = {{MuseScore BVBA}},
 title = {MuseScore Share Your Sheet Music},
 howpublished = {\url{https://musescore.com/}},
-year = {2015},
+year = {2015}
 }
 
 @incollection{Physio,
@@ -364,7 +364,7 @@ year = {2015},
   language = {English},
   year = {1990},
   publisher = {The MIT Press},
-  copyright = {Copyright © 1990 The MIT Press},
+  copyright = {Copyright © 1990 The MIT Press}
 }
 
 @inproceedings{Tanaka2002,
@@ -381,7 +381,7 @@ year = {2015},
  acmid = {1085183},
  publisher = {National University of Singapore},
  address = {Singapore, Singapore},
- keywords = {electromyogram, human computer interaction, musical controllers, position sensing, sensor instruments},
+ keywords = {electromyogram, human computer interaction, musical controllers, position sensing, sensor instruments}
 }
 
 @inproceedings{byrd2006prospects,
@@ -452,7 +452,7 @@ journal = {Science}
  doi = {10.1007/BF01088696},
  acmid = {161231},
  publisher = {Kluwer Academic Publishers},
- address = {Norwell, MA, USA},
+ address = {Norwell, MA, USA}
 }
 
 @article{Tiwari1996,
@@ -478,14 +478,14 @@ journal = {Science}
 author = {{Society for Music Theory}},
 title = {MTO a Journal for the Society for Music Theory},
 howpublished = {\url{http://www.mtosmt.org/index.php}},
-year = {2015},
+year = {2015}
 }
 
 @Misc{MusicTheoryNet,
 author = {{MusicTheory.net LLC}},
 title = {MusicTheory.net},
 howpublished = {\url{http://www.musictheory.net/}},
-year = {2015},
+year = {2015}
 }
 
 @article{css,
@@ -593,7 +593,7 @@ year = {2015},
 author = {{Oracle Corporation}},
 title = {MySQL The world's most popular open source database},
 howpublished = {\url{https://www.mysql.com/}},
-year = {2015},
+year = {2015}
 }
 
 @book{gamma1994design,
@@ -619,7 +619,7 @@ year = {2015},
  isbn = {1430239034, 9781430239031},
  edition = {1st},
  publisher = {Apress},
- address = {Berkely, CA, USA},
+ address = {Berkely, CA, USA}
 }
 
 @incollection{phonegapArticle,
@@ -657,7 +657,7 @@ language={English}
 @article{Heyduk1975,
  year={1975},
  issn={0031-5117},
- journal={Perception & Psychophysics},
+ journal={Perception and Psychophysics},
  volume={17},
  number={1},
  doi={10.3758/BF03204003},
@@ -737,4 +737,40 @@ language={English}
   pages={170},
   year={1975},
   publisher={American Psychological Association}
+}
+
+
+@Misc{osx,
+author = {{Apple Inc.}},
+title = {{OS X Mavericks 10.9.1 Update}},
+howpublished = {\url{https://support.apple.com/kb/dl1715?locale=en_US}},
+month = {12},
+year = {2013}
+}
+
+
+@Misc{macmini,
+author = {{Apple Inc.}},
+title = {{Mac Mini}},
+howpublished = {\url{https://www.apple.com/mac-mini/}},
+year = {2015}
+}
+
+@Misc{apacheServ,
+author = {{The Apache Software Foundation}},
+title = {{Apache HTTP Server Project}},
+howpublished = {\url{http://httpd.apache.org/}},
+year = {2015}
+}
+
+@article{garrett2005ajax,
+  title={Ajax: A new approach to web applications},
+  author={Garrett, Jesse James and others},
+  year={2005}
+}
+
+@article{crockford2006application,
+  title={The application/json media type for javascript object notation (json)},
+  author={Crockford, Douglas},
+  year={2006}
 }
