--- a/Documents/Thesis/HolderThesis2015.tex
+++ b/Documents/Thesis/HolderThesis2015.tex
@@ -897,7 +897,7 @@ This paper presented musiplectics, a new computational paradigm, that systematic
 
 % If you are using BibTeX, uncomment the following:
 
-%\nocite{*}
+\nocite{*}
 %\bibliographystyle{abbrvnat}
 \bibliographystyle{abbrv}
 \markright{Ethan G. Holder  \hfill Chapter Bibliography \hfill}
